--- a/styles.css
+++ b/styles.css
@@ -444,7 +444,7 @@ p1{
         display: none;
     }
 }
-
+/* 
 .riddle-container {
     position: fixed;
     top: 0;
@@ -506,3 +506,4 @@ p1{
     color: #f44336;
 }
  
+ */
